--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -160,7 +160,7 @@ img {
 }
 
 .banner {
-  background-image: url(../assets/images/home-header.png);
+  background-image: url(../images/home-header.png);
   background-size: cover;
   background-position: 30% 70%;
 }
@@ -218,7 +218,7 @@ img {
 }
 
 .glasses {
-  background-image: url(../assets/images/index-bg.png);
+  background-image: url(../images/index-bg.png);
   background-size: cover;
   background-position: 30% 70%;
 }
@@ -315,7 +315,7 @@ img {
   }
 
   .banner {
-      background-image: url(../assets/images/home-header-sm.png);
+      background-image: url(../images/home-header-sm.png);
   }
 
   .flex-md-wrap {
@@ -339,7 +339,7 @@ img {
   }
 
   .glasses {
-      background-image: url(../assets/images/index-bg-md.png);
+      background-image: url(../images/index-bg-md.png);
   }
 
   .glassesTitle {
@@ -447,7 +447,7 @@ img {
   }
 
   .glasses {
-      background-image: url(../assets/images/index-bg-sm.png);
+      background-image: url(../images/index-bg-sm.png);
   }
 
   .footer {
