--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -30,7 +30,7 @@
       <li
         class="border-sm border-sm-1 border-sm-white w-sm-50 fs-5 fs-sm-4 text-center text-white"
       >
-        <a class="d-block py-sm-3" href="../pages/FAQ.html">常見問題</a>
+        <a class="d-block py-sm-3" href="FAQ.html">常見問題</a>
       </li>
     </ul>
   </div>
